frontend/src/App.css
/* ... */
table {
    flex: 1;
    min-width: 550px;
    border-collapse: separate;
    border-spacing: 0;
    background-color: var(--bg-secondary);
    border-radius: 12px;
    overflow: hidden;
    border: 1px solid var(--border-color);
    table-layout: auto;
    margin-left: -1rem;
}

th, td {
    padding: 16px;
    text-align: center;
}

th:nth-child(1), td:nth-child(1) {
    width: 100px;
}

th:nth-child(2), td:nth-child(2) {
    width: 90px;
    text-align: center;
}

th:nth-child(3), td:nth-child(3) {
    width: 100px;
    text-align: center;
}

th:nth-child(4), td:nth-child(4) {
    width: 180px;
    text-align: center;
}

th {
    background-color: rgba(255, 255, 255, 0.02);
    color: var(--text-muted);
    font-weight: 600;
    font-size: 1rem;
    border-bottom: 1px solid var(--border-color);
}

td {
    border-bottom: 1px solid var(--border-color);
    cursor: pointer;
    font-size: 0.95rem;
    white-space: normal;
    word-break: break-word;
    line-height: 1.2;
    padding: 12px 16px;
}

tbody tr:last-child td {
    border-bottom: none;
}

tbody tr:hover td {
    background-color: rgba(255, 255, 255, 0.01);
}

.status-todo, .status-done {
    padding: 6px 12px;
    border-radius: 20px;
    font-size: 0.85rem;
    font-weight: 600;
    white-space: nowrap;
}

.status-todo {
    background-color: rgba(239, 68, 68, 0.1);
    color: var(--accent-danger);
}

.status-done {
    background-color: rgba(16, 185, 129, 0.1);
    color: var(--accent-success);
}

ul {
    padding-left: 1.5rem;
    color: var(--text-muted);
}

ul li {
    margin-bottom: 6px;
}

.action-buttons {
    align-items: center;
    justify-content: center;
    display: flex;
    gap: 8px;
    white-space: nowrap;
}

button {
    cursor: pointer;
    font-weight: 600;
    border-radius: 6px;
    border: none;
    transition: background-color 0.2s;
}

.btn-change {
    background-color: rgba(59, 130, 246, 0.1);
    color: var(--accent-color);
    padding: 6px 12px;
}

.btn-change:hover {
    background-color: rgba(59, 130, 246, 0.2);
}

.btn-delete {
    background-color: rgba(239, 68, 68, 0.1);
    color: var(--accent-danger);
    padding: 6px 12px;
}

.btn-delete:hover {
    background-color: rgba(239, 68, 68, 0.2);
}

.add-exercise-box {
    background-color: var(--bg-secondary);
    border: 1px solid var(--border-color);
    border-radius: 12px;
    padding: 1.25rem;
    padding-bottom: 1rem;
    width: 420px;
    min-width: 500px;
    max-height: 27rem;
    overflow-y: auto;
}

.add-exercise-box h3 {
    margin-bottom: 1.5rem;
    font-size: 1.25rem;
    text-align: center;
}

.form-grid {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

input[type="text"] {
    width: 100%;
    background-color: var(--bg-primary);
    border: 1px solid var(--border-color);
    color: var(--text-main);
    padding: 14px;
    border-radius: 8px;
    font-size: 1.05rem;
    outline: none;
    transition: border-color 0.2s;
}

input:focus {
    border-color: var(--accent-color);
}

.form-series-list h4 {
    color: var(--text-muted);
    font-size: 1.2rem;
    margin-bottom: 1.2rem;
    margin-top: 0.5rem;
    margin-left: 1.5rem;
}

.form-series-list {
    flex: 1;
    max-height: 6.5rem;
    height: 6.5rem;
    overflow-y: auto;
    overflow-x: hidden;
    padding-right: 1.5rem;
    box-sizing: border-box;
}

.form-series-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;
    width: 100%;
    box-sizing: border-box;
    overflow-y: auto;
    overflow-x: hidden;
}

.form-series-row span {
    min-width: 85px;
    font-size: 1.1rem;
    color: var(--text-muted);
    font-weight: 600;
    white-space: nowrap;
}


input[type="number"] {
    width: 7.5rem;
    background-color: var(--bg-primary);
    border: 1px solid var(--border-color);
    color: var(--text-main);
    padding: 0.75rem 0;
    margin-right: -0.2rem;
    font-size: 0.95rem;
    border-radius: 8px;
    outline: none;
    text-align: center;
    transition: border-color 0.2s;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type="number"] {
    -moz-appearance: textfield;
}

.btn-delete-row {
    background: none;
    font-size: 0.95rem;
    padding-right: 1rem;
    padding-left: 0.4rem;

}

.form-actions {
    display: flex;
    gap: 10px;
}

.btn-add-series {
    flex: 1;
    font-size: 1rem;
    background-color: transparent;
    border: 1px dashed var(--border-color);
    color: var(--text-muted);
    padding: 1rem;
}

.btn-add-series:hover {
    border-color: var(--text-muted);
    color: var(--text-main);
}

.btn-submit {
    flex: 1;
    font-size: 1rem;
    background-color: var(--accent-color);
    color: var(--text-main);
    padding: 12px;
}

.btn-submit:hover {
    background-color: #2563eb;
}

.history-container h2 {
    margin-bottom: 2rem;
    text-align: center;
}

.history-list {
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
}

/* ===========================
   ŠTÝLY PRE SEKCIU ŠTATISTIKY
   =========================== */

.statistiky-page {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
}

.sidebar-stats {
    background: var(--bg-secondary);
    border: 1px solid var(--border-color);
    border-radius: 12px;
    padding: 20px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
}

/* Hlavička grafu s dropdownom vedľa seba */
.stats-header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 15px;
    border-bottom: 1px solid var(--border-color);
    padding-bottom: 8px;
}

.stats-header-container h3 {
    margin: 0;
    font-size: 1.1rem;
    color: var(--text-muted);
}
/* ... */

